--- a/app/scss/_articles.scss
+++ b/app/scss/_articles.scss
@@ -39,16 +39,16 @@
     // border-top-right-radius: 10px;
   }
   &__img {
-    background-image: url(/images/image-currency.jpg);
+    background-image: url(./images/image-currency.jpg);
   }
   &__img1 {
-    background-image: url(/images/image-restaurant.jpg);
+    background-image: url(./images/image-restaurant.jpg);
   }
   &__img2 {
-    background-image: url(/images/image-plane.jpg);
+    background-image: url(./images/image-plane.jpg);
   }
   &__img3 {
-    background-image: url(/images/image-confetti.jpg);
+    background-image: url(./images/image-confetti.jpg);
   }
 
   &__text {
