--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -8,7 +8,7 @@
   }
 
   &__img {
-    background-image: url("./images/bg-intro-mobile.svg");
+    background-image: url("../../images/bg-intro-mobile.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -27,7 +27,7 @@
 
       &::before {
         content: "";
-        background-image: url("./images/bg-intro-desktop.svg");
+        background-image: url("../../images/bg-intro-desktop.svg");
         width: 150%;
         height: 100%;
         background-size: 131%;
@@ -39,7 +39,7 @@
 
     &::after {
       content: "";
-      background-image: url("./images/image-mockups.png");
+      background-image: url("../../images/image-mockups.png");
       width: 100%;
       height: 100%;
       background-size: 88%;
